--- a/index.html
+++ b/index.html
@@ -159,6 +159,32 @@
         <img src="photos/blue.png" width="600px" height="300px">
     </div>
     </div>
+    <h1>What They Say</h1>
+    <div id="say">
+        <div>
+            <p>I was impresed by the moling services,<br>lorem ipsum is simply free text used by<br>copytyping refreshing.Neque  porro est qui<br>net dolorem ipsum is simply free text <br>available in the market quia.</p>
+            <br>
+            <h1> Christine Rose</h1>
+            <p>CUSTOMER</p>
+        </div>
+        <div>
+            <p>I was impressed by the moling services.<br>lorem ipsum is simply free text used by copytyping refreshing.Neque porro est qui <br>not dolorem ipsum is simply free text<br>available in the market quia.</p>
+
+            <br>
+            <h1>Christine Rose</h1>
+            <p>CUSTOMER</p>
+            </div>
+
+         <div>
+            <p>I was impressed by the moling services.<br>lorem ipsum is simply free text used by copytyping refreshing.Neque porro est qui <br>not dolorem ipsum is simply free text<br>available in the market quia.</p>
+
+            <br>
+            <h1>Christine Rose</h1>
+            <p>CUSTOMER</p>
+
+         </div>
+        </div>
+    </div>
     <footer>
         <div class="container8">
          <div>
